--- a/package.json
+++ b/package.json
@@ -3,18 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "babel-cli": "^6.18.0",
     "commander": "^2.9.0",
-    "itunes-api-search": "^1.0.3",
     "jsonfile": "^2.4.0",
-    "prettyjson": "^1.2.0",
     "react-scripts": "0.7.0",
     "searchitunes": "^2.3.2"
   },
   "dependencies": {
     "lunr": "^0.7.2",
+    "material-ui": "^0.16.4",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
